--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <a class="navigation-logo">
+        <a class="navigation-logo" href="#">
           <img class="page-header-logo" src="#" alt="Логотип города Седона" width="140" height="70">
         </a>
         <ul class="navigation-list">
@@ -20,17 +21,16 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">Гостиницы</a>
           </li>
-
-        </ul>
+         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Поиск</span>
+              <span class="visually-hidden">Поиск.</span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">Избранное.</span>
             </a>
           </li>
           <li class="navigation-item">
@@ -38,9 +38,106 @@
             </a>
           </li>
         </ul>
-
       </nav>
-
     </header>
+    <main class="main-index">
+      <h1 class="visually-hidden">Добро пожаловать в городок Седона.</h1>
+      <img class="logo" src="#" alt="Живописные красные скалы в Седоне,штат Аризона,США">
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества.</h2>
+        <p class="advantages-title">Седона-небольшой городок в Аризоне,заслуживающий большего!</p>
+        <p class="advantages-subtitle">Рассмотрим причины,по которой Седона круче,чем Гранд-Каньон!</p>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-heading">Настоящий городок</h3>
+            <p class="advantages-description">Седона-не аттракцион для туристов,там течёт своя жизнь</p>
+            <img class="advantages-image" src="#" alt="Кафе в городе Седона">
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-heading">Небольшая площадь</h3>
+          <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-heading">Красивая дорога</h3>
+          <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-heading">Мало туристов</h3>
+          <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-heading">Там есть мост дьявола</h3>
+          <p class="advantages-description">Да,по нему можно пройти!Если вы осмелитесь,разумеется</p>
+          <img class="advantages-image" src="#" alt="Мост дьявола">
+        </li>
+        </ul>
+      </section>
+      <section class="advice">
+        <h2 class="visually-hidden">Преимущества отпуска в городе Седона.</h2>
+        <p class="advice-title">Приезжайте в Седону отдохнуть в комфорте и уюте</p>
+        <p class="advice-subtitle">Опытный персонал и качественное обслуживание</p>
+        <ul class="advice-list">
+          <li class="advice-item">
+            <h3 class="advice-heading">Жильё</h3>
+            <p class="advice-description">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+          </li>
+          <li class="advice-item">
+            <h3 class="advice-heading">Еда</h3>
+            <p class="advice-description">Всегда заказывайте топовый фирменный бургер,вы не разочаруетесь!</p>
+          </li>
+          <li class="advice-item">
+            <h3 class="advice-heading">Сувениры</h3>
+            <p class="advice-description">Не только китайского,но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="hotel-search">
+        <h2 class="visually-hidden">Поиск гостиницы.</h2>
+        <p class="hotel-title">Заинтересовались?</p>
+        <p class="hotel-subtitle">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+         гостиниц в Седоне</p>
+         <a class="button hotel-search-button" href="#">Поиск гостиницы в Седоне</a>
+      </section>
+        <section class="newsletter">
+          <h2 class="page-title">Подпишитесь на рассылку</h2>
+          <p class="about-text">Только полезная информация и никакого спама,честное бойскаутское!</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label>
+            <span class="visually-hidden">Ваш e-mail</span>
+            <input class="newsletter-field" type="email" name="newsletter-email" placeholder="Ваш e-mail"
+            id="newsletter-email" required>
+            </label>
+            <button class="button newsletter-button" type="submit">Подписаться</button>
+              </form>
+        </section>
+        <footer class="page-footer">
+          <section class="footer-social">
+            <h2 class="visually-hidden">Социальные сети.</h2>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a class="footer-social-icon" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow">
+                  <span class="visually-hidden">Vkontakte.</span>
+               </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-icon" href="https://t.me/htmlacademy" target="_blank" rel="nofollow">
+                <span class="visually-hidden">Telegram.</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-icon" href="https://www.youtube.com/user/htmlacademyru" target="_blank"
+              rel="nofollow">
+                <span class="visually-hidden">YouTube.</span>
+              </a>
+            </li>
+            </ul>
+          </section>
+         <a class="footer-phone" rel="nofollow" href="tel:+78128121212">+7 (812) 812-12-12</a>
+         <a class="footer-link" rel="nofollow" href="https://htmlacademy.ru/">
+          <span class="visually-hidden">Ссылка на сайт.</span>
+         </a>
+        </footer>
+      </div>
+    </main>
   </body>
 </html>
