--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
         <header class="page-header">
           <nav class="navigation">
             <a class="navigation-logo" href="#">
-              <img class="page-header-logo" src="#" alt="Логотип города Седона" width="140" height="70">
+              <img class="page-header-logo" src="images/logo.svg" alt="Логотип города Седона" width="140" height="70">
             </a>
             <ul class="navigation-list">
               <li class="navigation-item">
@@ -26,11 +26,13 @@
               <li class="navigation-item">
                 <a class="navigation-link" href="#">
                   <span class="visually-hidden">Поиск.</span>
+                  <img class="page-header-search" src="images/search.svg" alt="Поиск" width="44" height="64">
                 </a>
               </li>
               <li class="navigation-item">
                 <a class="navigation-link" href="#">
                   <span class="visually-hidden">Избранное.</span>
+                  <img class="page-header-favorites" src="images/favorites.svg" alt="Избранное" width="44" height="64">
                 </a>
               </li>
               <li class="navigation-item">
@@ -52,6 +54,10 @@
                     </li>
                     <li class="breadcrumbs-item">
                         <a class="breadcrumbs-link" href="catalog.html">Гостиницы</a>
+                        <img class="breadcrumbs-image" src="images/house-icon.svg" alt="Иконка дома"
+                        width="13" height="13">
+                        <img class="breadcrumbs-image" src="images/arrow.svg" alt="Стрелка"
+                        width="8" height="11">
                     </li>
                 </ul>
             </header>
@@ -130,6 +136,8 @@
                     </fieldset>
                     <button class="catalog button-select" type="submit">Применить</button>
                     <button class="catalog button-discard" type="submit">Сбросить</button>
+                    <img class="catalog-filter-image" src="images/background.png" alt="Фон скал"
+                       width="1200" height="412">
                 </form>
             </section>
             <section class="catalog-hotel">
@@ -143,17 +151,24 @@
                 </div>
                 <a class="button button-view button-view-active" href="#">
                     <span class="visually-hidden">Показать карточки</span>
+                    <img class="view-active-image" src="images/icon-3.svg" alt="Карточки"
+                    width="48" height="48">
                 </a>
                 <a class="button button-view button-view-active" href="#">
                     <span class="visually-hidden">Показать одну карточку</span>
+                    <img class="view-active-image" src="images/icon-1.svg" alt="Карточка"
+                    width="48" height="48">
                 </a>
                 <a class="button button-view button-view-active" href="#">
                     <span class="visually-hidden">Показать список</span>
+                    <img class="view-active-image" src="images/icon-2.svg" alt="Список"
+                    width="48" height="48">
                 </a>
                 <ul class="hotel-list">
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="#" alt="Вид на звездноё небо из пещеры">
+                            <img class="hotel-card-image" src="images/hotel-1.jpg" alt="Вид на звездноё небо из пещеры"
+                            width="300" height="212">
                             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
                         </a>
                         <p class="hotel-card-description">Гостиница</p>
@@ -165,7 +180,8 @@
                     </li>
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="#" alt="Радуга над горой">
+                            <img class="hotel-card-image" src="images/hotel-2.jpg" alt="Радуга над горой"
+                            width="300" height="212">
                             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
                         </a>
                         <p class="hotel-card-description">Гостиница</p>
@@ -177,7 +193,8 @@
                     </li>
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="#" alt="Солнечный день">
+                            <img class="hotel-card-image" src="images/hotel-3.jpg" alt="Солнечный день"
+                            width="300" height="212" >
                             <h3 class="hotel-card-title">Desert Quail Inn</h3>
                         </a>
                         <p class="hotel-card-description">Гостиница</p>
@@ -189,7 +206,8 @@
                     </li>
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="#" alt="Звёздное небо над скалами">
+                            <img class="hotel-card-image" src="images/hotel-4.jpg" alt="Звёздное небо над скалами"
+                            width="300" height="212" >
                             <h3 class="hotel-card-title">GreenTree Inn</h3>
                         </a>
                         <p class="hotel-card-description">Гостиница</p>
@@ -241,17 +259,23 @@
                 <li class="footer-social-item">
                   <a class="footer-social-icon" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow">
                     <span class="visually-hidden">Vkontakte.</span>
+                    <img class="footer-social-media" src="images/vk.svg" alt="Вконтакте"
+                    width="25" height="15">
                  </a>
               </li>
               <li class="footer-social-item">
                 <a class="footer-social-icon" href="https://t.me/htmlacademy" target="_blank" rel="nofollow">
                   <span class="visually-hidden">Telegram.</span>
+                  <img class="footer-social-media" src="images/tg.svg" alt="Телеграм"
+                width="18" height="16">
                 </a>
               </li>
               <li class="footer-social-item">
                 <a class="footer-social-icon" href="https://www.youtube.com/user/htmlacademyru" target="_blank"
                 rel="nofollow">
                   <span class="visually-hidden">YouTube.</span>
+                  <img class="footer-social-media" src="images/youtube.svg" alt="Ютуб"
+                width="23" height="18">
                 </a>
               </li>
               </ul>
@@ -259,6 +283,8 @@
            <a class="footer-phone" rel="nofollow" href="tel:+78128121212">+7 (812) 812-12-12</a>
            <a class="footer-link" rel="nofollow" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Ссылка на сайт.</span>
+            <img class="footer-social-logo" src="images/html-academy.svg" alt="Логотип"
+          width="115" height="34">
            </a>
           </footer>
     </div>
