--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="#" alt="Логотип города Седона" width="140" height="70">
+          <img class="page-header-logo" src="images/logo.svg" alt="Логотип города Седона" width="140" height="70">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -26,11 +26,13 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Поиск.</span>
+              <img class="page-header-search" src="images/search.svg" alt="Поиск" width="44" height="64">
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное.</span>
+              <img class="page-header-favorites" src="images/favorites.svg" alt="Избранное" width="44" height="64">
             </a>
           </li>
           <li class="navigation-item">
@@ -42,7 +44,12 @@
     </header>
     <main class="main-index">
       <h1 class="visually-hidden">Добро пожаловать в городок Седона.</h1>
-      <img class="logo" src="#" alt="Живописные красные скалы в Седоне,штат Аризона,США">
+      <img class="logo" src="images/index-background.png"
+        alt="Живописные скалы в Седоне,штат Аризона,США" width="1200" height="485">
+      <img class="logo-sedona" src="images/welcom-2.svg" alt="Добро пожаловать в Седону" width="458" height="352">
+      <img class="logo-sedona-footer" src="images/vector-sedona.svg" alt="Нижний колонитул"
+      width="1200" height="57">
+
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества.</h2>
         <p class="advantages-title">Седона-небольшой городок в Аризоне,заслуживающий большего!</p>
@@ -51,7 +58,8 @@
           <li class="advantages-item">
             <h3 class="advantages-heading">Настоящий городок</h3>
             <p class="advantages-description">Седона-не аттракцион для туристов,там течёт своя жизнь</p>
-            <img class="advantages-image" src="#" alt="Кафе в городе Седона">
+            <img class="advantages-image" src="images/photo-1.jpg" alt="Кафе в городе Седона"
+             width="800" height="385">
         </li>
         <li class="advantages-item">
           <h3 class="advantages-heading">Небольшая площадь</h3>
@@ -68,7 +76,8 @@
         <li class="advantages-item">
           <h3 class="advantages-heading">Там есть мост дьявола</h3>
           <p class="advantages-description">Да,по нему можно пройти!Если вы осмелитесь,разумеется</p>
-          <img class="advantages-image" src="#" alt="Мост дьявола">
+          <img class="advantages-image" src="images/photo-2.jpg" alt="Мост дьявола"
+            width="800" height="385">
         </li>
         </ul>
       </section>
@@ -80,14 +89,17 @@
           <li class="advice-item">
             <h3 class="advice-heading">Жильё</h3>
             <p class="advice-description">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
+            <img class="advice-images" src="images/house.svg" alt="Дом" width="76" height="72">
           </li>
           <li class="advice-item">
             <h3 class="advice-heading">Еда</h3>
             <p class="advice-description">Всегда заказывайте топовый фирменный бургер,вы не разочаруетесь!</p>
+            <img class="advice-images" src="images/food.svg" alt="Еда" width="75" height="70">
           </li>
           <li class="advice-item">
             <h3 class="advice-heading">Сувениры</h3>
             <p class="advice-description">Не только китайского,но и настоящего местного производства!</p>
+            <img class="advice-images" src="images/souvenir.svg" alt="Сувениры" width="65" height="76">
           </li>
         </ul>
       </section>
@@ -109,6 +121,8 @@
             </label>
             <button class="button newsletter-button" type="submit">Подписаться</button>
               </form>
+              <img class="newsletter-subscribe" src="images/subscribe.png" alt="Скалы в солнечный день"
+              width="1200" height="414.86">
         </section>
     </main>
         <footer class="page-footer">
@@ -118,17 +132,23 @@
               <li class="footer-social-item">
                 <a class="footer-social-icon" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow">
                   <span class="visually-hidden">Vkontakte.</span>
+                  <img class="footer-social-media" src="images/vk.svg" alt="Вконтакте"
+                  width="25" height="15">
                </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-icon" href="https://t.me/htmlacademy" target="_blank" rel="nofollow">
                 <span class="visually-hidden">Telegram.</span>
+                <img class="footer-social-media" src="images/tg.svg" alt="Телеграм"
+                width="18" height="16">
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-icon" href="https://www.youtube.com/user/htmlacademyru" target="_blank"
               rel="nofollow">
                 <span class="visually-hidden">YouTube.</span>
+                <img class="footer-social-media" src="images/youtube.svg" alt="Ютуб"
+                width="23" height="18">
               </a>
             </li>
             </ul>
@@ -136,6 +156,8 @@
          <a class="footer-phone" rel="nofollow" href="tel:+78128121212">+7 (812) 812-12-12</a>
          <a class="footer-link" rel="nofollow" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Ссылка на сайт.</span>
+          <img class="footer-social-logo" src="images/html-academy.svg" alt="Логотип"
+          width="115" height="34">
          </a>
         </footer>
       </div>
