--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
   <body>
     <div class="container">
         <header class="page-header">
           <nav class="navigation">
             <a class="navigation-logo" href="#">
-              <img class="page-header-logo" src="images/logo.svg" alt="Логотип города Седона" width="140" height="70">
+              <img class="page-header-logo" src="images/logo.svg" alt="Логотип города Седона." width="140" height="70">
             </a>
             <ul class="navigation-list">
               <li class="navigation-item">
@@ -24,19 +27,18 @@
              </ul>
             <ul class="navigation-list navigation-user">
               <li class="navigation-item">
-                <a class="navigation-link" href="#">
-                  <span class="visually-hidden">Поиск.</span>
-                  <img class="page-header-search" src="images/search.svg" alt="Поиск" width="44" height="64">
+                <a class="navigation-link navigation-icon-search" href="#">
+                    <span class="visually-hidden">Поиск.</span>
                 </a>
               </li>
               <li class="navigation-item">
                 <a class="navigation-link" href="#">
                   <span class="visually-hidden">Избранное.</span>
-                  <img class="page-header-favorites" src="images/favorites.svg" alt="Избранное" width="44" height="64">
+                  <img class="page-header-favorites" src="images/favorites.svg" alt="Избранное." width="44" height="64">
                 </a>
               </li>
               <li class="navigation-item">
-                <a class="navigation-link button" href="#">Хочу сюда
+                <a class="navigation-link button-navigation" href="#">ХОЧУ СЮДА!
                 </a>
               </li>
             </ul>
@@ -44,6 +46,7 @@
         </header>
 
         <main class="main-catalog">
+            <div class="search-hotel">
             <header class="catalog-header">
                 <h1 class="catalog-header-title">Гостиницы Седоны</h1>
                 <ul class="breadcrumbs">
@@ -54,9 +57,9 @@
                     </li>
                     <li class="breadcrumbs-item">
                         <a class="breadcrumbs-link" href="catalog.html">Гостиницы</a>
-                        <img class="breadcrumbs-image" src="images/house-icon.svg" alt="Иконка дома"
+                        <img class="breadcrumbs-image" src="images/house-icon.svg" alt="Иконка дома."
                         width="13" height="13">
-                        <img class="breadcrumbs-image" src="images/arrow.svg" alt="Стрелка"
+                        <img class="breadcrumbs-image" src="images/arrow.svg" alt="Стрелка."
                         width="8" height="11">
                     </li>
                 </ul>
@@ -136,8 +139,7 @@
                     </fieldset>
                     <button class="catalog button-select" type="submit">Применить</button>
                     <button class="catalog button-discard" type="submit">Сбросить</button>
-                    <img class="catalog-filter-image" src="images/background.png" alt="Фон скал"
-                       width="1200" height="412">
+                </div>
                 </form>
             </section>
             <section class="catalog-hotel">
@@ -151,23 +153,23 @@
                 </div>
                 <a class="button button-view button-view-active" href="#">
                     <span class="visually-hidden">Показать карточки</span>
-                    <img class="view-active-image" src="images/icon-3.svg" alt="Карточки"
+                    <img class="view-active-image" src="images/icon-3.svg" alt="Карточки."
                     width="48" height="48">
                 </a>
                 <a class="button button-view button-view-active" href="#">
                     <span class="visually-hidden">Показать одну карточку</span>
-                    <img class="view-active-image" src="images/icon-1.svg" alt="Карточка"
+                    <img class="view-active-image" src="images/icon-1.svg" alt="Карточка."
                     width="48" height="48">
                 </a>
                 <a class="button button-view button-view-active" href="#">
                     <span class="visually-hidden">Показать список</span>
-                    <img class="view-active-image" src="images/icon-2.svg" alt="Список"
+                    <img class="view-active-image" src="images/icon-2.svg" alt="Список."
                     width="48" height="48">
                 </a>
                 <ul class="hotel-list">
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="images/hotel-1.jpg" alt="Вид на звездноё небо из пещеры"
+                            <img class="hotel-card-image" src="images/hotel-1.jpg" alt="Вид на звездноё небо из пещеры."
                             width="300" height="212">
                             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
                         </a>
@@ -180,7 +182,7 @@
                     </li>
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="images/hotel-2.jpg" alt="Радуга над горой"
+                            <img class="hotel-card-image" src="images/hotel-2.jpg" alt="Радуга над горой."
                             width="300" height="212">
                             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
                         </a>
@@ -193,7 +195,7 @@
                     </li>
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="images/hotel-3.jpg" alt="Солнечный день"
+                            <img class="hotel-card-image" src="images/hotel-3.jpg" alt="Солнечный день."
                             width="300" height="212" >
                             <h3 class="hotel-card-title">Desert Quail Inn</h3>
                         </a>
@@ -206,7 +208,7 @@
                     </li>
                     <li class="hotel-card">
                         <a class="hotel-card-link" href="#">
-                            <img class="hotel-card-image" src="images/hotel-4.jpg" alt="Звёздное небо над скалами"
+                            <img class="hotel-card-image" src="images/hotel-4.jpg" alt="Звёздное небо над скалами."
                             width="300" height="212" >
                             <h3 class="hotel-card-title">GreenTree Inn</h3>
                         </a>
@@ -239,7 +241,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="newsletter">
+            <section class="newsletter-catalog">
                 <h2 class="page-title">Подпишитесь на рассылку</h2>
                 <p class="about-text">Только полезная информация и никакого спама,честное бойскаутское!</p>
                 <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -259,14 +261,14 @@
                 <li class="footer-social-item">
                   <a class="footer-social-icon" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow">
                     <span class="visually-hidden">Vkontakte.</span>
-                    <img class="footer-social-media" src="images/vk.svg" alt="Вконтакте"
+                    <img class="footer-social-media" src="images/vk.svg" alt="Вконтакте."
                     width="25" height="15">
                  </a>
               </li>
               <li class="footer-social-item">
                 <a class="footer-social-icon" href="https://t.me/htmlacademy" target="_blank" rel="nofollow">
                   <span class="visually-hidden">Telegram.</span>
-                  <img class="footer-social-media" src="images/tg.svg" alt="Телеграм"
+                  <img class="footer-social-media" src="images/tg.svg" alt="Телеграм."
                 width="18" height="16">
                 </a>
               </li>
@@ -274,7 +276,7 @@
                 <a class="footer-social-icon" href="https://www.youtube.com/user/htmlacademyru" target="_blank"
                 rel="nofollow">
                   <span class="visually-hidden">YouTube.</span>
-                  <img class="footer-social-media" src="images/youtube.svg" alt="Ютуб"
+                  <img class="footer-social-media" src="images/youtube.svg" alt="Ютуб."
                 width="23" height="18">
                 </a>
               </li>
@@ -283,7 +285,7 @@
            <a class="footer-phone" rel="nofollow" href="tel:+78128121212">+7 (812) 812-12-12</a>
            <a class="footer-link" rel="nofollow" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Ссылка на сайт.</span>
-            <img class="footer-social-logo" src="images/html-academy.svg" alt="Логотип"
+            <img class="footer-social-logo" src="images/html-academy.svg" alt="Логотип."
           width="115" height="34">
            </a>
           </footer>
