--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
   <body>
     <div class="container">
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="images/logo.svg" alt="Логотип города Седона" width="140" height="70">
+          <img class="page-header-logo" src="images/logo.svg" alt="Логотип города Седона." width="140" height="70">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -24,31 +27,30 @@
          </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link navigation-icon-search" href="#">
               <span class="visually-hidden">Поиск.</span>
-              <img class="page-header-search" src="images/search.svg" alt="Поиск" width="44" height="64">
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное.</span>
-              <img class="page-header-favorites" src="images/favorites.svg" alt="Избранное" width="44" height="64">
+              <img class="page-header-favorites" src="images/favorites.svg" alt="Избранное." width="44" height="64">
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link button" href="#">Хочу сюда
+            <a class="navigation-link button-navigation" href="#">ХОЧУ СЮДА!
             </a>
           </li>
         </ul>
       </nav>
     </header>
     <main class="main-index">
+
       <h1 class="visually-hidden">Добро пожаловать в городок Седона.</h1>
       <img class="logo" src="images/index-background.png"
-        alt="Живописные скалы в Седоне,штат Аризона,США" width="1200" height="485">
-      <img class="logo-sedona" src="images/welcom-2.svg" alt="Добро пожаловать в Седону" width="458" height="352">
-      <img class="logo-sedona-footer" src="images/vector-sedona.svg" alt="Нижний колонитул"
-      width="1200" height="57">
+          alt="Живописные скалы в Седоне,штат Аризона,США." width="1200" height="485">
+
+
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества.</h2>
@@ -56,10 +58,12 @@
         <p class="advantages-subtitle">Рассмотрим причины,по которой Седона круче,чем Гранд-Каньон!</p>
         <ul class="advantages-list">
           <li class="advantages-item">
+            <div class="advantages-house">
             <h3 class="advantages-heading">Настоящий городок</h3>
             <p class="advantages-description">Седона-не аттракцион для туристов,там течёт своя жизнь</p>
-            <img class="advantages-image" src="images/photo-1.jpg" alt="Кафе в городе Седона"
+            <img class="advantages-image" src="images/photo-1.jpg" alt="Кафе в городе Седона."
              width="800" height="385">
+            </div>
         </li>
         <li class="advantages-item">
           <h3 class="advantages-heading">Небольшая площадь</h3>
@@ -73,12 +77,15 @@
           <h3 class="advantages-heading">Мало туристов</h3>
           <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
+        <div class="advantages-house">
         <li class="advantages-item">
           <h3 class="advantages-heading">Там есть мост дьявола</h3>
           <p class="advantages-description">Да,по нему можно пройти!Если вы осмелитесь,разумеется</p>
-          <img class="advantages-image" src="images/photo-2.jpg" alt="Мост дьявола"
+          <img class="advantages-image" src="images/photo-2.jpg" alt="Мост дьявола."
             width="800" height="385">
+
         </li>
+        </div>
         </ul>
       </section>
       <section class="advice">
@@ -89,17 +96,17 @@
           <li class="advice-item">
             <h3 class="advice-heading">Жильё</h3>
             <p class="advice-description">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
-            <img class="advice-images" src="images/house.svg" alt="Дом" width="76" height="72">
+            <img class="advice-images" src="images/house.svg" alt="Дом." width="76" height="72">
           </li>
           <li class="advice-item">
             <h3 class="advice-heading">Еда</h3>
             <p class="advice-description">Всегда заказывайте топовый фирменный бургер,вы не разочаруетесь!</p>
-            <img class="advice-images" src="images/food.svg" alt="Еда" width="75" height="70">
+            <img class="advice-images" src="images/food.svg" alt="Еда." width="75" height="70">
           </li>
           <li class="advice-item">
             <h3 class="advice-heading">Сувениры</h3>
             <p class="advice-description">Не только китайского,но и настоящего местного производства!</p>
-            <img class="advice-images" src="images/souvenir.svg" alt="Сувениры" width="65" height="76">
+            <img class="advice-images" src="images/souvenir.svg" alt="Сувениры." width="65" height="76">
           </li>
         </ul>
       </section>
@@ -108,7 +115,7 @@
         <p class="hotel-title">Заинтересовались?</p>
         <p class="hotel-subtitle">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
          гостиниц в Седоне</p>
-         <a class="button hotel-search-button" href="#">Поиск гостиницы в Седоне</a>
+         <a class="button-search" href="#">Поиск гостиницы в Седоне</a>
       </section>
         <section class="newsletter">
           <h2 class="page-title">Подпишитесь на рассылку</h2>
@@ -121,8 +128,6 @@
             </label>
             <button class="button newsletter-button" type="submit">Подписаться</button>
               </form>
-              <img class="newsletter-subscribe" src="images/subscribe.png" alt="Скалы в солнечный день"
-              width="1200" height="414.86">
         </section>
     </main>
         <footer class="page-footer">
@@ -132,14 +137,14 @@
               <li class="footer-social-item">
                 <a class="footer-social-icon" href="https://vk.com/htmlacademy" target="_blank" rel="nofollow">
                   <span class="visually-hidden">Vkontakte.</span>
-                  <img class="footer-social-media" src="images/vk.svg" alt="Вконтакте"
+                  <img class="footer-social-media" src="images/vk.svg" alt="Вконтакте."
                   width="25" height="15">
                </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-icon" href="https://t.me/htmlacademy" target="_blank" rel="nofollow">
                 <span class="visually-hidden">Telegram.</span>
-                <img class="footer-social-media" src="images/tg.svg" alt="Телеграм"
+                <img class="footer-social-media" src="images/tg.svg" alt="Телеграм."
                 width="18" height="16">
               </a>
             </li>
@@ -147,7 +152,7 @@
               <a class="footer-social-icon" href="https://www.youtube.com/user/htmlacademyru" target="_blank"
               rel="nofollow">
                 <span class="visually-hidden">YouTube.</span>
-                <img class="footer-social-media" src="images/youtube.svg" alt="Ютуб"
+                <img class="footer-social-media" src="images/youtube.svg" alt="Ютуб."
                 width="23" height="18">
               </a>
             </li>
@@ -156,7 +161,7 @@
          <a class="footer-phone" rel="nofollow" href="tel:+78128121212">+7 (812) 812-12-12</a>
          <a class="footer-link" rel="nofollow" href="https://htmlacademy.ru/">
           <span class="visually-hidden">Ссылка на сайт.</span>
-          <img class="footer-social-logo" src="images/html-academy.svg" alt="Логотип"
+          <img class="footer-social-logo" src="images/html-academy.svg" alt="Логотип."
           width="115" height="34">
          </a>
         </footer>
